--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
+
 <body>
-    
+    <header>
+        <div class="title">
+            <h1>Our Pricing Plan</h1>
+            <p class="description">We are an industry-leading company that value honesty, integrity and efficiency,
+                building quality products.
+            </p>
+        </div>
+        <div class="on-off">
+        <div class="button">
+            Monthly
+            <button class="border-none">
+                <i class="bi bi-toggle-on on"></i>
+            </button>
+        </div>
+        <div class="button">
+            Yearly
+            <button class="border-none">
+                <i class="bi bi-toggle-off off"></i>
+            </button>
+        </div>
+        </div>
+    </header>
 </body>
+
 </html>
