add first card basic and fix header

--- a/index.html
+++ b/index.html
@@ -11,27 +11,69 @@
 
 <body>
     <header>
-        <div class="title">
+        <section class="title">
             <h1>Our Pricing Plan</h1>
             <p class="description">We are an industry-leading company that value honesty, integrity and efficiency,
                 building quality products.
             </p>
-        </div>
-        <div class="on-off">
-        <div class="button">
-            Monthly
-            <button class="border-none">
-                <i class="bi bi-toggle-on on"></i>
-            </button>
-        </div>
-        <div class="button">
-            Yearly
-            <button class="border-none">
-                <i class="bi bi-toggle-off off"></i>
-            </button>
-        </div>
+        </section>
+
+        <!--/Description-->
+
+        <div class="button-on-off">
+            <div class="button">
+                Monthly
+                <button class="border-none">
+                    <i class="bi bi-toggle-on on"></i>
+                </button>
+            </div>
+            <div class="button">
+                Yearly
+                <button class="border-none">
+                    <i class="bi bi-toggle-off off"></i>
+                </button>
+            </div>
         </div>
     </header>
+
+    <!--/Button on Monthly off Yearly-->
+
+    <!--/Header-->
+
+    <main>
+        <article class="card-basic">
+            <h2>Basic</h2>
+            <p class="rgba">Most Popular</p>
+            <div class="main-card">
+                <div class="value">
+                    <strong>$</strong>
+                    <span class="price">2.45</span>
+                    <span class="rgba">/mo</span>
+                </div>
+                <span class=yearly>
+                    Yearly
+                </span>
+                <button class="sale">15% Off</button>
+                <div class="choose-plan">
+                    <button class="butt-plan"><strong>Choose plan</strong></button>
+                </div>
+                <i class="bi bi-check-lg"></i>
+                <i class="bi bi-check-lg"></i>
+                <i class="bi bi-check-lg"></i>
+                <i class="bi bi-x-lg"></i>
+                <i class="bi bi-x-lg"></i>
+                <i class="bi bi-x-lg"></i>
+                <ul class="list-promo">
+                    <li>Unlimited Products</li>
+                    <li>Custom Permission</li>
+                    <li>Custom Infrastructure</li>
+                    <li>Custom Design & features</li>
+                    <li>Unlimited updates</li>
+                    <li>Unlimited Infrastructure</li>
+                </ul>
+            </div>
+        </article>
+    </main>
 </body>
 
 </html>
