--- a/index.html
+++ b/index.html
@@ -11,27 +11,29 @@
 
 <body>
     <header>
-        <section class="title">
-            <h1>Our Pricing Plan</h1>
-            <p class="description">We are an industry-leading company that value honesty, integrity and efficiency,
-                building quality products.
-            </p>
-        </section>
+        <div class="container">
+            <section class="title">
+                <h1>Our Pricing Plan</h1>
+                <p class="description">We are an industry-leading company that value honesty, integrity and efficiency,
+                    building quality products.
+                </p>
+            </section>
 
-        <!--/Description-->
+            <!--/Description-->
 
-        <div class="button-on-off">
-            <div class="button">
-                Monthly
-                <button class="border-none">
-                    <i class="bi bi-toggle-on on"></i>
-                </button>
-            </div>
-            <div class="button">
-                Yearly
-                <button class="border-none">
-                    <i class="bi bi-toggle-off off"></i>
-                </button>
+            <div class="button-on-off">
+                <div class="button">
+                    Monthly
+                    <button class="border-none">
+                        <i class="bi bi-toggle-on on"></i>
+                    </button>
+                </div>
+                <div class="button">
+                    Yearly
+                    <button class="border-none">
+                        <i class="bi bi-toggle-off off"></i>
+                    </button>
+                </div>
             </div>
         </div>
     </header>
@@ -41,7 +43,7 @@
     <!--/Header-->
 
     <main>
-        <article class="card-basic">
+        <div class="card">
             <h2>Basic</h2>
             <p class="rgba">Most Popular</p>
             <div class="main-card">
@@ -57,22 +59,84 @@
                 <div class="choose-plan">
                     <button class="butt-plan"><strong>Choose plan</strong></button>
                 </div>
-                <i class="bi bi-check-lg"></i>
-                <i class="bi bi-check-lg"></i>
-                <i class="bi bi-check-lg"></i>
-                <i class="bi bi-x-lg"></i>
-                <i class="bi bi-x-lg"></i>
-                <i class="bi bi-x-lg"></i>
-                <ul class="list-promo">
-                    <li>Unlimited Products</li>
-                    <li>Custom Permission</li>
-                    <li>Custom Infrastructure</li>
-                    <li>Custom Design & features</li>
-                    <li>Unlimited updates</li>
-                    <li>Unlimited Infrastructure</li>
-                </ul>
+                <div class="check">
+                    <ul class="list-promo">
+                        <li><i class="bi bi-check-lg"></i>Unlimited Products</li>
+                        <li><i class="bi bi-check-lg"></i>Custom Permission</li>
+                        <li><i class="bi bi-check-lg"></i>Custom Infrastructure</li>
+                        <li><i class="bi bi-x-lg"></i>Custom Design & features</li>
+                        <li><i class="bi bi-x-lg"></i>Unlimited updates</li>
+                        <li><i class="bi bi-x-lg"></i>Unlimited Infrastructure</li>
+                    </ul>
+                </div>
             </div>
-        </article>
+        </div>
+
+        <!--/Card Basic-->
+
+        <div class="card card-professional">
+            <h2>Professional</h2>
+            <p class="rgba">Recommended</p>
+            <div class="main-card">
+                <div class="value">
+                    <strong>$</strong>
+                    <span class="price">4.45</span>
+                    <span class="rgba">/mo</span>
+                </div>
+                <span class=yearly>
+                    Yearly
+                </span>
+                <button class="sale">15% Off</button>
+                <div>
+                    <button class="btn-white"><strong>Choose plan</strong></button>
+                </div>
+                <div class="check">
+                    <ul class="list-promo">
+                        <li><i class="bi bi-check-lg"></i>Unlimited Products</li>
+                        <li><i class="bi bi-check-lg"></i>Custom Permission</li>
+                        <li><i class="bi bi-check-lg"></i>Custom Infrastructure</li>
+                        <li><i class="bi bi-check-lg"></i>Custom Design & features</li>
+                        <li><i class="bi bi-x-lg"></i>Unlimited updates</li>
+                        <li><i class="bi bi-x-lg"></i>Unlimited Infrastructure</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!--/Card Professional-->
+
+        <div class="card">
+            <h2>Ultimate</h2>
+            <p class="rgba">Best value</p>
+            <div class="main-card">
+                <div class="value">
+                    <strong>$</strong>
+                    <span class="price">12.45</span>
+                    <span class="rgba">/mo</span>
+                </div>
+                <span class=yearly>
+                    Yearly
+                </span>
+                <button class="sale">15% Off</button>
+                <div class="choose-plan" class="btn-white">
+                    <span><!--By inserting class="choose-plan btr-white", we obtain an example of how it would look in tablet mode.-->
+                    <button class="butt-plan"><strong>Choose plan</strong></button></span>
+                </div>
+                <div class="check">
+                    <ul class="list-promo">
+                        <li><i class="bi bi-check-lg"></i>Unlimited Products</li>
+                        <li><i class="bi bi-check-lg"></i>Custom Permission</li>
+                        <li><i class="bi bi-check-lg"></i>Custom Infrastructure</li>
+                        <li><i class="bi bi-check-lg"></i>Design & features</li>
+                        <li><i class="bi bi-check-lg"></i>Unlimited updates</li>
+                        <li><i class="bi bi-check-lg"></i>Unlimited Infrastructure</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!--/Card Ultimate-->
+
     </main>
 </body>
 
